# artifact-v2

./: .gitignore  .gitlab-ci.yml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
artiFACT/: conftest.py  main.py  pages.py  seed_sprint3.py  seed_sprint9.py
artiFACT/data/: acronyms_seed.csv
artiFACT/kernel/: access_logger.py  ai_provider.py  background.py  config.py  crypto.py  db.py  events.py  exceptions.py  log_forwarder.py  models.py  rate_limiter.py  s3.py  schemas.py  security_headers.py  tsquery.py
artiFACT/scripts/: __main__.py  generate_playground_snapshot.py  golden_snapshot.sql  playground_snapshot.sql  seed_artifact_corpus.py  seed_bw_h12_history.sql  seed_corpus_comments.sql  seed_v1_data.py  verify_artifact_corpus.py  verify_seed.py
artiFACT/static/: theme.css
artiFACT/templates/: acronyms.html  admin.html  base.html  browse.html  chat.html  export.html  import.html  login.html  playground.html  queue.html  settings.html
docker/: Dockerfile  Dockerfile.worker  init-test-db.sh
docker/nginx/: nginx.conf
docs/: artifact-v2-architecture.md  artifact-v2-human-walkthrough.md  artifact-v2-master-reference.md  bureaucracy.md  q-and-a.md  runbook.md  sprint-00-infrastructure.md  sprint-01-kernel-auth.md  sprint-02-taxonomy.md  sprint-03-facts-core.md  sprint-04-queue.md  sprint-05-signing.md  sprint-06-search.md  sprint-07-ai-chat.md  sprint-08-import.md  sprint-09-export.md  sprint-10-feedback.md  sprint-11-presentation.md  sprint-12-admin.md  sprint-13-polish-harden.md  sprint-14-cosmos-port.md  techstat_factcorpus.sql
docs/rmf/: boundary-diagram.md  control-implementations.md  data-flow.md  ssp.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  001b94b328b9_add_is_program_flag_to_fc_node.py  002_add_fc_signature.py  003_add_fc_import_session.py  004_add_export_tables.py  005_add_fc_fact_comment.py  006_add_challenge_fields.py  0677bc35f84d_add_fc_import_staged_fact_and_session_.py  0b749c66df15_add_undone_at_and_undone_by_uid_to_fc_.py  336aaaae7666_add_program_description_to_fc_node.py  356146896c1b_add_smart_tags_and_smart_tags_text_to_.py  5b60f30f1b0d_add_fc_acronym_table.py  9c6cc21350e2_add_sprint_3_tables.py  f236640d1e37_add_fc_chat_session_and_fc_chat_message.py  f5c899b0e37e_add_deleted_status_to_staged_fact_.py  fa4eefb85d7f_add_smart_tags_manual_to_fc_fact_version.py
tests/: conftest.py
tests/e2e/: test_approval_flow.py
tests/integration/: test_coverage_boost.py  test_em_dash_removal.py  test_full_lifecycle.py  test_left_pane.py  test_real_coverage.py  test_security.py  test_theme_system.py  test_zt_compliance.py
tests/kernel/: test_auth_middleware.py  test_csrf.py  test_session.py  (+3 more)
(+211 files in other folders)
