[project]
name = "artiFACT"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic==2.10.4",
    "redis[hiredis]==5.2.1",
    "celery[redis]==5.4.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "jinja2==3.1.5",
    "structlog==24.4.0",
    "cryptography==44.0.0",
    "boto3==1.35.86",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pip-audit==2.7.3",
    "cyclonedx-bom==4.6.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
