[project]
name = "artiFACT"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic==2.10.4",
    "redis[hiredis]==5.2.1",
    "celery[redis]==5.4.0",
    "httpx==0.28.1",
    "tiktoken>=0.7.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart==0.0.20",
    "jinja2==3.1.5",
    "structlog==24.4.0",
    "cryptography==44.0.0",
    "boto3==1.35.86",
    "pydantic-settings==2.7.1",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pdfminer.six>=20231228",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pip-audit==2.7.3",
    "cyclonedx-bom==4.6.0",
    "locust>=2.29.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["artiFACT", "tests"]

[tool.coverage.run]
omit = [
    "artiFACT/seed_*.py",
    "artiFACT/conftest.py",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = false
warn_unused_configs = true
disallow_any_generics = false
exclude = [
    "tests/",
    "migrations/",
    "artiFACT/seed_",
    "artiFACT/conftest\\.py",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "tiktoken.*",
    "pdfminer.*",
    "pptx.*",
    "docx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "artiFACT.modules.export.docgen.*",
    "artiFACT.modules.import_pipeline.analyzer",
    "artiFACT.modules.import_pipeline.location_recommender",
    "artiFACT.modules.queue.scope_resolver",
    "artiFACT.modules.search.acronym_miner",
    "artiFACT.modules.ai_chat.service",
]
ignore_errors = true
